basic tab yt opening bot
Signed-off-by: Vedansh Saini <77830698+vedansh-5@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "playwright-extra": "^4.3.6",
     "playwright-extra-plugin-stealth": "^0.0.1",
     "pm2": "^6.0.5",
+    "puppeteer": "^24.8.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "uuid": "^11.1.0"
   }
 }
