working play, proxy, notworking thumbnails, improper watchTime
Signed-off-by: Vedansh Saini <77830698+vedansh-5@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vedansh-5/humanBot.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vedansh-5/humanBot/issues"
+  },
+  "homepage": "https://github.com/vedansh-5/humanBot#readme",
   "description": "",
   "dependencies": {
-    "bullmq": "^5.52.2",
     "dotenv": "^16.5.0",
-    "fs-extra": "^11.3.0",
-    "ioredis": "^5.6.1",
-    "playwright": "^1.52.0",
-    "playwright-extra": "^4.3.6",
-    "playwright-extra-plugin-stealth": "^0.0.1",
-    "pm2": "^6.0.5",
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "uuid": "^11.1.0"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
